# MARVELpipeline

./: .gitignore  MARVELworkshop.ipynb  README.md  README.org  ThArIdentification.py  Untitled.ipynb  biasCorrectedScienceImage.py  compile  configure.py  database.py  debug.py  dvc.yaml  fluxEtalonExtraction.py  fluxExtraction.py  fluxFlatExtraction.py  fluxScienceExtraction.py  inputfile.yaml  marvel.py  masterBias.py  masterFlat.py  optimalEtalonExtraction.py  optimalExtraction.py  optimalScienceExtraction.py  orderExtraction.py  orderMaskExtraction.py  orderScienceExtraction.py  params.yaml  pipeline.py  pyproject.toml  runPipelineExample.py  todo.org  tools.py  waveLengthCalibration.py  wavelengthCalibration.py
Docs/AlgorithmDescription/: algorithmdescription.tex
Docs/Cookbook/: cookbook.tex
Docs/Images/: makeImage.org
pipeline/: Cargo.toml
pipeline/src/: configuration.rs  lib.rs  main.rs
python/: biasAndDarkCorrection.py  biasCorrectedScienceImage.py  database.py  marvelpipe.py  mask_fits_image.py  masterBias.py  masterDark.py  masterFlat.py  masterFlatOneDimOrders.py  masterThAr.py  optimalExtraction.py  orderMaskExtraction.py  orderScienceExtraction.py  pipeline.py  runPipelineExample.py  test.py  tools.py  wavelengthCalibration.py
