[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"


[dependencies]
ndarray         = "0.15.6"
ndarray-stats   = "0.5.1"
ndarray-ndimage = "0.3.0"
fitsio          = {version = "0.21.2", features = ["fitsio-src", "array"]}
noisy_float     = "0.2.0"
chrono          = "0.4.26"
glob            = "0.3.1"
csv             = "1.0"
nalgebra        = "0.32.3"
varpro          = "0.7.1"
itertools       = "0.11.0"
serde_yaml      = "0.9"


[lib]
name = "configuration"
path = "src/configuration.rs"

[[bin]]
name = "biassubtraction"                               # cargo run --bin biassubtraction
src = "src/bin/biassubtraction.rs"

[[bin]]
name = "2dmaskdetermination"              
src = "src/bin/2dmaskdetermination.rs"

[[bin]]
name = "2dorderextraction"
src = "src/bin/2dorderextraction.rs"

[[bin]]
name = "1dflatrelativeorderextraction"
src = "src/bin/1dflatrelativeorderextraction.rs"

# [[bin]]
# name = "etalon"
# src = "src/bin/etalon.rs"

